# UniHow

./: .breakpoints  Procfile  README.md  aboutUniHow.csv  answer.py  ask.py  blacklist.csv  browse.py  chatbot.py  edit.py  faculties.csv  feedback_report.py  flaskapp.py  game.py  generalfunc.py  gipanel.py  housing.csv  main.py  nospam.py  pyproject.toml  qna.py  requirements.txt  split_try.py  spp.csv  test.py
