[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
pyTelegramBotAPI = "^4.5.1"
emoji = "^1.7.0"
pymongo = "^4.1.1"
mongohelper = "^0.0.11"
pandas = "^1.4.3"
better-profanity = "^0.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"